<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191616"
    android:stretchColumns="1">



    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" />

        <TextView
            android:padding="3dip"
            android:text="@string/open"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/ctrl_o"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" />
        <TextView
            android:padding="3dip"
            android:text="@string/save"
            android:textColor="@android:color/darker_gray" />
        <TextView
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/ctrl_s"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="3dip"
            android:text="@string/save_as"
            android:textColor="@android:color/darker_gray" />
        <TextView
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/ctrl_shift_s"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:background="#696969" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/x"
            android:textColor="@android:color/darker_gray" />
        <TextView
            android:padding="3dip"
            android:text="@string/aimport"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/x"
            android:textColor="@android:color/darker_gray" />
        <TextView
            android:padding="3dip"
            android:text="@string/aexport"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/ctrl_e"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:background="#696969" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" />
        <TextView
            android:padding="3dip"
            android:text="@string/qult"
            android:textColor="@android:color/darker_gray" />
    </TableRow>

</TableLayout>