<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/one_one"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text1_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/one_tow"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text1_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/one_three"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text1_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/one_four"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text2_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/tow_one"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/tow_tow"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/tow_three"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text2_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/tow_four"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/c3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text3_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/three_one"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text3_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/three_tow"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text3_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/three_three"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text3_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/three_four"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/c4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text4_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/four_one"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text4_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/four_tow"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text4_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/four_three"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text4_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/lab2_1"
            android:gravity="center"
            android:text="@string/four_four"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>